# multi-agent-server

./: .dockerignore  .gitignore  Makefile  README.md  dockerfile  langgraph.json  main.py  pyproject.toml  pyrightconfig.json  requirements-lock.txt  test.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: main.py
app/AI/core/llm/: __init__.py  providers.py
app/AI/core/utils/: logger.py
app/AI/prompts/: dectect_joke_prompt.py  jokes_prompt.py
app/AI/supervisor_workflow/departments/: __init__.py
app/AI/supervisor_workflow/head_quarter/: __init__.py  dept_registry_center.py  main_graph.py
app/AI/workflows/: chat.py  constants.py
app/AI/workflows/agents/: general_response_agent.py  map_agent.py  map_searcher_agent.py  math_expert_agent.py  research_agent.py
app/AI/workflows/graph/: main_graph.py  test_graph.py  worker_registry.py
app/AI/workflows/models/: __init__.py  chat_state.py  chat_state_backup.py
app/AI/workflows/nodes/: aggregator.py  general_response.py  map_searcher.py  math_expert.py  (+3 more)
app/utils/: logger.py  md_toolkit.py  retry_config.py  stream_queue_manager.py  stream_tools.py
app/web_base/config/: __init__.py  constants.py  settings.py
app/web_base/models/: API_models.py  stream_models.py
app/web_base/routes/: graph_routes.py
app/web_base/services/: chat_service.py  chat_services.py  chat_services_org.py  event_converter.py  stream_orchestrator.py
db/checkpoints/: checkpoints.sqlite-shm  checkpoints.sqlite-wal
(+50 files in other folders)
