[project]
name = "multi-agent-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aenum>=3.1.16",
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "huggingface-hub>=0.32.3",
    "ipython>=9.2.0",
    "json5>=0.12.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-deepseek>=0.1.3",
    "langchain-huggingface>=0.1.2",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.4.1",
    "markdown>=3.8",
    "numexpr>=2.10.2",
    "pydantic>=2.11.4",
    "tenacity>=9.1.2",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.2",
]
